--- a/gb/10/6/9/n2933282.md
+++ b/gb/10/6/9/n2933282.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/orxxpr3833/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/orxxpr3833/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/orxxpr3833/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/orxxpr3833/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/orxxpr3833/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/orxxpr3833/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>当局者迷 旁观者清</h2>
 
 <h6></h6>
 <hr>
-<p>大千世界对于广泛的人们来讲是个谜，也是<ahref="https://github.com/orxxpr3833/djy/blob/master/gb/tag/%E8%BF%B7.md#1">迷</a>。花花世界，“色不迷人，人自迷”，世人就在迷中痴。 </p>
-<p>“人、事、地、物、时”，因缘际会，随时随地都存在着主观和客观的因素。更何况，人非圣贤，人很难避免有或多或少的主观意识的羁绊。人往往容易先入为主或者自以为是，甚至于刚愎自用，自信过头，以至于自负而不自知；或者是显示心、争斗心、妒嫉心所衍生的逞强好胜，都有可能是造成“当局者<ahref="https://github.com/orxxpr3833/djy/blob/master/gb/tag/%E8%BF%B7.md#1">迷</a> ”的原因。 </p>
+<p>大千世界对于广泛的人们来讲是个谜，也是<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%B7.md#1">迷</a>。花花世界，“色不迷人，人自迷”，世人就在迷中痴。 </p>
+<p>“人、事、地、物、时”，因缘际会，随时随地都存在着主观和客观的因素。更何况，人非圣贤，人很难避免有或多或少的主观意识的羁绊。人往往容易先入为主或者自以为是，甚至于刚愎自用，自信过头，以至于自负而不自知；或者是显示心、争斗心、妒嫉心所衍生的逞强好胜，都有可能是造成“当局者<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%B7.md#1">迷</a> ”的原因。 </p>
 <p>常言说得好：“德不孤必有邻”、“三人行必有我师”、“益者三友：友直、友谅、友多闻”，人间处处都有良师益友，关键就在我们自己是不是真正愿意敞开心扉尝试着去接受。 </p>
 <p>我们用什么眼光看别人，别人也可能用什么眼光看我们。一个人就算再怎么聪明一世，再怎么有本事，也不可能事事完全正确，又怎么能够自我本位地藐视别人，而总以为自己的识见判断比别人高一等呢？旁观者所提的看法或意见，可能未必就一定是对的，但是，如果我们能够谦卑的抱持忠言逆耳有利于修心养性而虚心参考，认真的思量，找一找看自己哪儿有所迷失，有所不足，这对当局的自己来说，再怎么说，都是好事一桩，都是有百益而无一害的。 </p>
 <p>换个角色来讲，“旁观者清”，其实，话虽然说是这么的说，如果我们是旁观者，同样的，我们也必须谨言慎行，修口德是必需的。凡事得真正的为对方着想，而不能以自己的思维强制的给予人身上，毕竟对方是否理解是否接受是否愿意改变，都是对方自己的事情。世上的很多事情是不可以强而为之的，有些时候点到为止，顺其自然的反而会是更好的结果，所谓“桥到船头自然直”。</p>
@@ -17,47 +17,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/3/30/n2861462.md#1">成语故事：一朝之忿</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/4/30/n2893007.md#1">迷你陶器做工精细 超逼真</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/8/n2931805.md#1">杜阳明：全面剖析共产党在“城市改造”掠夺运动中的卑劣手法周刊(系列42)</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/8/n2931844.md#1">研究：鼓噪真能影响裁判判决</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/8/n2932211.md#1">科学破除足球迷思</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/9/n2932308.md#1">G20世界杯两不误 忙坏各国代表团</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/9/n2932376.md#1">智慧“机”战 苹果苦战</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/6/9/n2932612.md#1">《钢铁人2》暂休  《变形金刚3》开拍</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/9/n13364610.md#1">一道小学数学题的答案</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/7/n13359564.md#1">古老智慧故事：魔法钱袋</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/3/30/n2861462.md#1">成语故事：一朝之忿</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/30/n2893007.md#1">迷你陶器做工精细 超逼真</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/8/n2931805.md#1">杜阳明：全面剖析共产党在“城市改造”掠夺运动中的卑劣手法周刊(系列42)</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/8/n2931844.md#1">研究：鼓噪真能影响裁判判决</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/8/n2932211.md#1">科学破除足球迷思</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/9/n2932308.md#1">G20世界杯两不误 忙坏各国代表团</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/9/n2932376.md#1">智慧“机”战 苹果苦战</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/6/9/n2932612.md#1">《钢铁人2》暂休  《变形金刚3》开拍</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/25/n13745143.md#1">情系道缘 石匠的祈祷令少女起死回生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/24/n9988943.md#1" target="_blank">共产党毁灭人类暴政录——前言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038882.md#1" target="_blank">严家伟：我亲历的《星星诗刊》大冤案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/10/n13368067.md#1">【古韵流芳】大清国母 雄才大略的孝庄文皇后</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/10/n13368062.md#1">【未解之谜】时间只是人类的幻觉？！</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/5/n13356561.md#1">【百年真相】自由独立之殇 大师陈寅恪无处安身</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/11/n13370142.md#1">【百年真相】1975年河南溃坝 23万人死亡之谜</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/6/n13358100.md#1">神迹奇事：舍利子穿透物体  宋代大科学家也无解</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/15/n13377351.md#1">【微视频】中共历代党魁的社会主义经济密码</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/12/n13372289.md#1">【未解之谜】外星人访谈录（2）来自外太空的远征军</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/13/n13374429.md#1">【新闻看点】天津主持争吵直播中断 只因一道菜</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/6/n13356986.md#1">和中共空中对决 美空军选定四款杰出战机</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13374571.md#1">王友群：中共六中全会透露三个重大信息</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13375614.md#1">彭帅控张高丽性侵 国际女网协会吁公正调查</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13375826.md#1">遭封杀三个月 张哲瀚“现身”微博小号</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13374491.md#1">黄明志揪中国歌手唱《墙外》 坚信音乐无国界</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/15/n13376166.md#1">TWICE世界巡回演唱会12月开跑 纽约等地开唱</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13374852.md#1">靠胡瓜节目赚房租走红 郭忠祐接8点档买车了</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13375667.md#1">汪小菲删除大S相关帖文 两人离婚传言再起</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/13/n13373735.md#1">问自己一个简单问题 把消极情绪抛在脑后</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/8/n13362540.md#1">蹬脚跟也能降血糖！每天2分钟增“回春物质”</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/13/n13373110.md#1">吹哨人披露：辉瑞疫苗临床试验存在3大问题</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/13/n13374239.md#1">炸薯条不健康？其实只要改变烹调和食用方式</a></li>
-<li><a href="https://github.com/orxxpr3833/djy/blob/master/gb/21/11/14/n13374842.md#1">在世界最冷居住地如何生活？ 当地网红告诉你</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/orxxpr3833/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/orxxpr3833/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/6/9/n2933282.htm">当局者迷 旁观者清</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/6/9/n2933282.htm">当局者迷 旁观者清</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/orxxpr3833/djy/blob/master/gb/10/6/9/n2933282.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/orxxpr3833/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/orxxpr3833/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/orxxpr3833/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/orxxpr3833/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/orxxpr3833/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/10/6/9/n2933282.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
